[tool.poetry]
name = "geoffrey-butler"
version = "0.1.0"
description = "Agent Based Bultler at your service."
authors = ["chandralegend"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
